@@ -6,7 +6,7 @@
 
 ###MATCHREPORT###
 
-<h2>Der Spielbericht</h2>
+<h2>Der Spielbericht ###MATCH_COMPETITION_NAME### ###MATCH_ROUND_NAME###</h2>
 
 <table style="width:100%">
 <tr>
@@ -59,9 +59,9 @@
 <!-- ###MATCH_MEDIAS### begin -->
 <div id="cfcleague-report-media">
 <h2>Trainerkommentare</h2>
-<!-- ###MATCH_MEDIAS_2### begin -->
-###MATCH_MEDIA###
-<!-- ###MATCH_MEDIAS_2### end -->
+<!-- ###MATCH_MEDIA### begin -->
+###MATCH_MEDIA_PLAYER###
+<!-- ###MATCH_MEDIA### end -->
 </div>
 <!-- ###MATCH_MEDIAS### end -->
 
@@ -87,10 +87,10 @@
 
   <!-- ###MATCH_PICTURES### begin -->
   <div id="cfcleague-report-images">
-  ###MATCH_FIRST_PICTURE###
-  <!-- ###MATCH_PICTURES_2### begin -->
-  ###MATCH_PICTURE###
-  <!-- ###MATCH_PICTURES_2### end -->
+  ###MATCH_FIRST_PICTURE_IMGTAG###
+  <!-- ###MATCH_PICTURE### begin -->
+  ###MATCH_PICTURE_IMGTAG###
+  <!-- ###MATCH_PICTURE### end -->
   </div>
   <!-- ###MATCH_PICTURES### end -->
 
