@@ -7,6 +7,8 @@ v0.3.5 (??.05.2008) (not released)
 * New markers for leaguetable template:
 ** ###ROW_OLDPOSITION### - position on previous round
 ** ###ROW_POSITIONCHANGE### - returns either UP, DOWN or EQ. Useable for CSS classes.
+* HTML-Markers for match media changed to common structure: Subpart ###MATCH_MEDIAS_2### is now ###MATCH_MEDIA###. ###MATCH_MEDIA### is now ###MATCH_MEDIA_PLAYER###
+* HTML-Markers for match pictures changed to common structure: Subpart ###MATCH_PICTURES_2### is now ###MATCH_PICTURE###. ###MATCH_PICTURE### is now ###MATCH_PICTURE_IMGTAG###. ###MATCH_FIRST_PICTURE### is now ###MATCH_FIRST_PICTURE_IMGTAG###
 
 v0.3.5 (22.05.2008) (not released)
 * Profilelist with new option to show a list of profiles with birthday in current day or month
